@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS HEAD (2006-11-23):
+KTIGCC 1.06 (2006-11-25):
 
 * Added Anjuta 2 project, removed Anjuta 1 project.
 * Fixed missing layout in the Operating System tab of the Program Options
@@ -13,6 +13,7 @@ CVS HEAD (2006-11-23):
 * Ctrl+Tab/Ctrl+G now skips the project root and the categories.
 * When saving a project for the first time, if it is still named "Project1", a
   name based on the .tpr file name is now set (as in TIGCC IDE).
+* Disabled debugging and informational messages from libti*.
 
 
 KTIGCC 1.05 (2006-10-24):
